--- a/appsec.yml
+++ b/appsec.yml
@@ -1,22 +1,13 @@
 version: 0.0
 os: linux
 files:
-  - source: Config/config.txt
-    destination: /webapps/Config
+  - source: /home/ubuntu
+    destination: /tmp
   - source: source
-    destination: /webapps/myApp
+    destination: /tmp
 hooks:
   BeforeInstall:
-    - location: Scripts/UnzipResourceBundle.sh
-    - location: Scripts/UnzipDataBundle.sh
+    - location: /home/ubuntu
+    - location: 
   AfterInstall:
-    - location: Scripts/RunResourceTests.sh
-      timeout: 180
-  ApplicationStart:
-    - location: Scripts/RunFunctionalTests.sh
-      timeout: 3600
-  ValidateService:
-    - location: Scripts/MonitorService.sh
-      timeout: 3600
-      runas: codedeployuser
-
+    - location: /tmp
